--- a/Sentiment_Analysis_For_News_Headline_ML_Major.ipynb
+++ b/Sentiment_Analysis_For_News_Headline_ML_Major.ipynb
@@ -323,7 +323,7 @@
       },
       "source": [
         "# taking ready dataset from Git Hub\r\n",
-        "df=pd.read_csv('https://raw.githubusercontent.com/kvora125/Sentiment_Analysis_For_News_Headline-Major_Project/main/dataset/news.csv')\r\n",
+        "df=pd.read_csv('https://raw.githubusercontent.com/kvora125/Sentiment_Analysis_For_News_Headline/main/dataset/news.csv')\r\n",
         "df"
       ],
       "execution_count": null,
@@ -492,8 +492,8 @@
         "if(os.path.isdir(\"Sentiment-Analysis-Major-Project\")):\r\n",
         "  print(\"repo exists\")\r\n",
         "else:\r\n",
-        "  Repo.clone_from(\"https://github.com/kvora125/Sentiment-Analysis-Major-Project\", \"/content/Sentiment-Analysis-Major-Project\")\r\n",
-        "final=pickle.load(open('/content/Sentiment-Analysis-Major-Project/sentiment_model.p','rb'))"
+        "  Repo.clone_from(\"https://github.com/kvora125/Sentiment-Analysis\", \"/content/Sentiment-Analysis-Major-Project\")\r\n",
+        "final=pickle.load(open('/content/Sentiment-Analysis/sentiment_model.p','rb'))"
       ],
       "execution_count": null,
       "outputs": []
@@ -521,11 +521,11 @@
         "import os\r\n",
         "from git import Repo\r\n",
         "import pickle\r\n",
-        "if(os.path.isdir(\"Sentiment-Analysis-Major-Project\")):\r\n",
+        "if(os.path.isdir(\"Sentiment-Analysis\")):\r\n",
         "  print(\"repo exists\")\r\n",
         "else:\r\n",
-        "  Repo.clone_from(\"https://github.com/kvora125/Sentiment-Analysis-Major-Project\", \"/content/Sentiment-Analysis-Major-Project\")\r\n",
-        "final=pickle.load(open('/content/Sentiment-Analysis-Major-Project/sentiment_model.p','rb'))\r\n",
+        "  Repo.clone_from(\"https://github.com/kvora125/Sentiment-Analysis\", \"/content/Sentiment-Analysis-Major-Project\")\r\n",
+        "final=pickle.load(open('/content/Sentiment-Analysis/sentiment_model.p','rb'))\r\n",
         "# print(final.predict(['₹100 fine for not wearing mask in Indore, 6 found infected with UK COVID variant'])[0])\r\n",
         "predicted = (final.predict([str(input('enter a news headline for sentiment analysis : '))])[0])\r\n",
         "print('Headline is Predicted to be                  :',predicted)"
@@ -558,8 +558,8 @@
         "if(os.path.isdir(\"Sentiment-Analysis-Major-Project\")):\r\n",
         "  print(\"repo exists\")\r\n",
         "else:\r\n",
-        "  Repo.clone_from(\"https://github.com/kvora125/Sentiment-Analysis-Major-Project\", \"/content/Sentiment-Analysis-Major-Project\")\r\n",
-        "sentiment_model=pickle.load(open('/content/Sentiment-Analysis-Major-Project/sentiment_model.p','rb'))\r\n",
+        "  Repo.clone_from(\"https://github.com/kvora125/Sentiment-Analysis\", \"/content/Sentiment-Analysis\")\r\n",
+        "sentiment_model=pickle.load(open('/content/Sentiment-Analysis/sentiment_model.p','rb'))\r\n",
         "st.title(\"News Headline Sentiment Analysis\")\r\n",
         "st.subheader('This project is based on Vader sentiment Analysis(lexicon approach) with TFIFD Vectorizer and SVM to predict sentiment in news healdline')\r\n",
         "st.write('This project uses data Web Scraped from inshorts.com and dataset built using prediction by vader sentiment analysis')\r\n",
